fix: Correct grid gap

--- a/hw6_portfolio/style.css
+++ b/hw6_portfolio/style.css
@@ -99,7 +99,7 @@ nav{
     padding-left: 10vw;
     font-size: clamp(40px, 5vw, 80px);
     position: absolute;
-    top: 45%;
+    top: 52%;
     left: 30%;
     margin-left: auto;
     margin-right: auto;
@@ -133,6 +133,7 @@ nav{
     position: relative;
     width: 100%;
     max-width: 1800px;
+    gap: 10px;
 }
 
 .show-item img {
